--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <div class="container">
             <nav class="navbar">
               <div class="container-fluid">
-                <div class="navbar-header"><a href="#" class="navbar-brand logo"><img src="/assets/imgs/logo.png" class="logo-image">
+                <div class="navbar-header"><a href="#" class="navbar-brand logo"><img src="assets/imgs/logo.png" class="logo-image">
                     <div class="logo-moto">
                       <h6 class="moto-item">Creativity</h6>
                       <h6 class="moto-item">Accountibility</h6>
@@ -58,12 +58,12 @@
             <div class="row">
               <div class="col-md-4 col-sm-5">
                 <div class="img-iphone"><img src="assets/imgs/iphone.svg" class="iphone">
-                  <div class="iphone-background"></div><img src="/assets/imgs/apple-logo.svg" class="iphone-logo">
+                  <div class="iphone-background"></div><img src="assets/imgs/apple-logo.svg" class="iphone-logo">
                 </div>
               </div>
               <div class="col-md-8 col-sm-7">
                 <div class="img-macbook"><img src="assets/imgs/macbook.svg" class="macbook">
-                  <div class="macbook-background"></div><img src="/assets/imgs/apple-logo.svg" class="macbook-logo">
+                  <div class="macbook-background"></div><img src="assets/imgs/apple-logo.svg" class="macbook-logo">
                 </div>
               </div>
             </div>
@@ -439,7 +439,7 @@
       <div class="footer-container">
         <div class="footer-wrapper">
           <div class="container-fluid">
-            <div class="row row-eq-height"><img src="/assets/imgs/logo.png" class="logo">
+            <div class="row row-eq-height"><img src="assets/imgs/logo.png" class="logo">
               <div class="footer-massage">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
             </div>
             <div class="row">
